--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,7 +80,7 @@
 			<ul class="copyright">
 				<li><a href="impressum.html" target="_blank">Impressum</a></li>
 				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
-				<li>Jekyll integration: <a href="http://andrewbanchi.ch" target="_blank">Andrew Banchich</a></li>
+				<li>Jekyll integration: <a href="https://github.com/andrewbanchich/forty-jekyll-theme" target="_blank">Andrew Banchich</a></li>
 
 			</ul>
 		</div>
