--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,11 +37,11 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>Blablub</h2>
+                    <h2>Welcome</h2>
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Get Started</a></li>
+                    <li><a href="{% link tutorials.md %}" class="button next">Get Started</a></li>
                 </ul>
             </div>
         </section>
