--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -2,26 +2,6 @@
 layout: post
 ---
 
-<style>
-  blockquote.infobox {
-    color:black;
-    background: #f9f9f9;
-    font-style:normal;
-    padding: 1em;
-    -webkit-border-radius:10px;
-    -moz-border-radius:10px;
-    border-radius:10px;
-    border:2px solid #a9a9a9;
-  }
-  .infobox p {
-    margin:0
-  }
-
-  .p-author a {
-    color:grey;
-  }
-</style>
-
 {% assign people = site.pages | where: "shortID", "people" | first %}
 
 <article class="post h-entry" itemscope itemtype="http://schema.org/TechArticle">
@@ -55,11 +35,7 @@ layout: post
 
   <div class="post-content e-content" itemprop="articleBody">
 
-    <p>{% if page.previous.url %}<a href="{{page.previous.url}}">&lt; {{page.previous.title}}</a> {% endif %}
-    | <a href=".">Overview</a> |
-    {% if page.next.url %} <a href="{{page.next.url}}">{{page.next.title}} &gt;</a>{% endif %}</p>
-
-    <blockquote class="infobox">
+    <div class="box">
       <h4>Level:
     {% if page.level == 0 %}
       ⚪⚪⚪⚪⚪ <span style="color:purple">All levels
@@ -90,7 +66,7 @@ layout: post
 
       <h4>Overview</h4>
     {% include toc.html html=content %}
-    </blockquote>
+    </div>
 
     {{ content }}
 
@@ -108,10 +84,10 @@ layout: post
     </blockquote>
     {% endif %}
 
-    <p>{% if page.previous.url %}<a href="{{page.previous.url}}">&lt; {{page.previous.title}}</a> {% endif %}
-    | <a href=".">Overview</a> |
-    {% if page.next.url %} <a href="{{page.next.url}}">{{page.next.title}} &gt;</a>{% endif %}</p>
-
+    <p>{% if page.previous.url %}<a href="{{page.previous.url}}" class="button previous">{{page.previous.title}}</a> {% endif %}
+      <a href="." class="button">Overview</a>
+      {% if page.next.url %} <a href="{{page.next.url}}" class="button next">{{page.next.title}}</a>{% endif %}</p>
+  
   </div>
 
 {%- if site.disqus.shortname -%}
