--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -108,6 +108,46 @@
 			}
 		}
 
+		&.previous {
+			padding-left: 4.5em;
+			position: relative;
+
+			&:before, &:after {
+				@include vendor('transition', 'opacity #{_duration(transition)} ease-in-out');
+				background-position: center left;
+				background-repeat: no-repeat;
+				background-size: 36px 24px;
+				content: '';
+				display: block;
+				height: 100%;
+				position: absolute;
+				left: 1.5em;
+				top: 0;
+				vertical-align: middle;
+				width: 36px;
+			}
+
+			&:before {
+				background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="36px" height="24px" viewBox="0 0 36 24" zoomAndPan="disable"><style>line { stroke: #{_palette(fg-bold)}; stroke-width: 2px; }</style><line x1="0" y1="12" x2="34" y2="12" /><line x1="9" y1="4" x2="0" y2="12.5" /><line x1="9" y1="20" x2="0" y2="11.5" /></svg>');
+			}
+
+			&:after {
+				background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="36px" height="24px" viewBox="0 0 36 24" zoomAndPan="disable"><style>line { stroke: #{_palette(highlight)}; stroke-width: 2px; }</style><line x1="0" y1="12" x2="34" y2="12" /><line x1="9" y1="4" x2="0" y2="12.5" /><line x1="9" y1="20" x2="0" y2="11.5" /></svg>');
+				opacity: 0;
+				z-index: 1;
+			}
+
+			&:hover, &:active {
+				&:after {
+					opacity: 1;
+				}
+			}
+
+			@include breakpoint(large) {
+				padding-left: 5em;
+			}
+		}
+
 		&.special {
 			background-color: _palette(fg-bold);
 			box-shadow: none;
