--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -48,17 +48,17 @@ ul.toc {
 
       <h4>Level:
     {% if page.level == 0 %}
-      ⚪⚪⚪⚪⚪ <span style="color:#8d82c4">All levels
+      ⚫⚫⚫⚫⚫ <span style="color:#8d82c4">All levels
     {% elsif page.level == 1 %}
-      ⚫⚪⚪⚪⚪ <span style="color:#87c5a4">Beginner
+      ⚪⚫⚫⚫⚫ <span style="color:#87c5a4">Beginner
     {% elsif page.level == 2 %}
-      ⚫⚫⚪⚪⚪ <span style="color:#87c5a4">Beginner
+      ⚪⚪⚫⚫⚫ <span style="color:#87c5a4">Beginner
     {% elsif page.level == 3 %}
-      ⚫⚫⚫⚪⚪ <span style="color:#e7b788">Advanced
+      ⚪⚪⚪⚫⚫ <span style="color:#e7b788">Advanced
     {% elsif page.level == 4 %}
-      ⚫⚫⚫⚫⚪ <span style="color:#e7b788">Advanced
+      ⚪⚪⚪⚪⚫ <span style="color:#e7b788">Advanced
     {% elsif page.level == 5 %}
-      ⚫⚫⚫⚫⚫ <span style="color:#ec8d81">Expert
+      ⚪⚪⚪⚪⚪ <span style="color:#ec8d81">Expert
     {% endif %} </h4>
       <h4>Requirements</h4>
       <ul>
