--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -47,14 +47,14 @@
 	);
 
 	$palette: (
-		bg:					#012102,
-		bg-alt:				#033315,
+		bg:					#242943,
+		bg-alt:				#2a2f4a,
 		fg:					#ffffff,
 		fg-bold:			#ffffff,
 		fg-light:			rgba(244,244,255,0.2),
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
-		highlight:			#dfff9b,
+		highlight:			#9bf1ff,
 		accent1:			#6fc3df,
 		accent2:			#8d82c4,
 		accent3:			#ec8d81,
