updated events page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,7 @@
 			</ul>
 			<ul class="copyright">
 				<li><a href="impressum.html" target="_blank">Impressum</a></li>
+				<li>Content: <a href="https://www.pik-potsdam.de/en/institute/departments/transformation-pathways/research/landuse" target="_blank">Land Use Management @ PIK</a></li>
 				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 				<li>Jekyll integration: <a href="https://github.com/andrewbanchich/forty-jekyll-theme" target="_blank">Andrew Banchich</a></li>
 
@@ -32,3 +33,4 @@
 	<script src="{{ "assets/js/util.js" | absolute_url }}"></script>
 	<!--[if lte IE 8]><script src="{{ "assets/js/ie/respond.min.js" | absolute_url }}"></script><![endif]-->
 	<script src="{{ "assets/js/main.js" | absolute_url }}"></script>
+	<script src="{{ "assets/js/codecopy.js" | absolute_url }}"></script>
