--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -82,7 +82,7 @@ layout: landing
 		</header>
 		<p>{{ page.outtro_text | markdownify }}</p>
 		<ul class="actions">
-			<li><a href="{% link {{ page.outtro_button_url }} %}" class="button next">{{ page.outtro_button_header }}</a></li>
+			<li><a href="{{ page.outtro_button_url }}" class="button next">{{ page.outtro_button_header }}</a></li>
 		</ul>
 	</div>
 </section>
