--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -23,7 +23,7 @@ layout: landing
 {% for element in site[page.collection] %}
 <section>
 		<a href="{{element.url}}" class="image">
-			<img src="{% link {{element.image}} %}" alt="" data-position="center center" />
+			<img src="{{element.image}}" alt="" data-position="center center" />
 		</a>
 		<div class="content">
 			<div class="inner">
