--- a/_sass/components/_image.scss
+++ b/_sass/components/_image.scss
@@ -10,6 +10,11 @@ img {
     max-width: 100%;
 }
 
+.round {
+	border-radius: 50%;
+	width: 200px;
+}
+
 .image {
 		border: 0;
 		display: inline-block;
