--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -4,15 +4,15 @@ layout: post
 
 {% assign team = site.pages | where: "shortID", "team" | first %}
 
-<div class="inner">
+<div class="row">
 {% for person in page.data %}
-<div class="col-4 col-12-medium">
+<div class="box 3u 6u(medium) 12u(small)">
   {%- if person.url -%}<a href="{{person.url}}" class="image">{%- endif -%}
 {%- if person.image -%}
 <img src="{{person.image}}" alt="{{ person.firstName }} {{ person.lastName }}", class="round">
 {%- endif -%}
   {%- if person.url -%}</a>{%- endif -%}
-  <div class="team-person-description">
+  <div class="">
   <h3>{%- if person.url -%}<a href="{{person.url}}">{%- endif -%}
   {{ person.firstName }} {{ person.lastName }}
   {%- if person.url -%}</a>{%- endif -%}</h3>
@@ -29,5 +29,6 @@ layout: post
     {%- assign sep= ", " -%}
   {%- endfor -%}</p>
   </div>
-{%- endfor -%}
+  </div>
+  {%- endfor -%}
 </div>
